--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "@tomtom-international/web-sdk-maps": "^6.18.0"
+        "@tomtom-international/web-sdk-maps": "^6.18.0",
+        "vue-router": "^3.5.3"
     }
 }
