--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
+        "express-generator": "^4.16.1",
         "vue-router": "^3.5.3"
     }
 }
